# temi_v1

./: CMakeLists.txt  README.MD  frames_2025-08-14_17.56.32.gv  package.xml
config/: diff_drive_controller.yaml  hardware_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
launch/: control.launch.py  control_and_slamtec.launch.py  display.launch.py  gazebo.launch.py  test.launch.py
meshes/: base_link.STL  left_caster_body_link.STL  left_caster_wheel_link.STL  left_motor_link.STL  right_caster_body_link.STL  right_caster_wheel_link.STL  right_motor_link.STL
rviz/: navigation_with_camera.rviz
urdf/: TEMI-V1.csv  TEMI-V1.urdf.xacro  ros2_control.xacro
